Tue Feb 26 11:51:56 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkkeyhash.c (_gtk_key_hash_remove_entry): Fix
	double free.

Tue Feb 26 10:38:14 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkkeyhash.c (_gtk_key_hash_lookup_keyval): Handle
	a keyval of 0, by returning an empty list. (#72617,
	Kevin Breit)

2002-02-26  Richard Hult  <rhult@codefactory.se>

	* gtk/gtktreeview.c (gtk_tree_view_expand_all): Fix
	#72586. Silently accept empty tree.
	(gtk_tree_view_collapse_all): Likewise.

2002-02-26  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtk.def: A couple of name changes.

Mon Feb 25 22:10:47 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_class_init): Fix
	double set of bindings for page-up/down. (#72605, Tor Lillqvist)

	* gtk/gtkmenu.c (gtk_menu_key_press): Remove consumed modiifers
	when setting up accelerator to make accelerators look prettier.
	(#65416, Guillermo S. Romero)

2002-02-26  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkkeys-win32.c: Implement the functions that until
	now just were non-functional stubs. For "hardware keycodes", we
	use Windows virtual keycodes. Not scancodes, although that at
	first might seem more low-level and a better match to X11
	keycodes. 

	The Windows API is really mixed up and confused with respect to
	scancodes and virtual keycodes. (Surprised?) Some scancodes are
	generated by two keys on the keyboard (!), and although the
	keyboard messages do have a flag to indicate which key the user
	pressed, other API that take a scan code as input don't let you
	specify which actual key you mean.

	(update_keymap): Function to build a X11-like representation of
	the keyboard. Each key has four keysyms: two levels (nonshifted
	and shifted) and two groups (normal and with AltGr).

	(gdk_keymap_get_direction): Use the codepage corresponding to the
	thread's input locale, not the system codepage.

	* gdk/win32/gdkglobals.h
	* gdk/win32/gdkmain-win32.c
	* gdk/win32/gdkprivate-win32.h